# cat_detector

./: README.md  app.py  main.py  pyproject.toml  train.py
